--- a/merch.html
+++ b/merch.html
@@ -13,7 +13,9 @@
     <div class="topnav">
         <a href="index.html">Home</a>
         <a href="Roster.html">Roster</a>
+        <a href="apply.html">Apply Now</a>
         <a class="active" href="merch.html">Merch</a>
         <a href="Contact.html">Contact us</a>
+        
     </div>
 </head>
