--- a/Roster.html
+++ b/Roster.html
@@ -13,6 +13,7 @@
     <div class="topnav">
         <a href="index.html">Home</a>
         <a class="active" href="Roster.html">Roster</a>
+        <a href="apply.html">Apply Now</a>
 
         <!-- Disabled -->
         <!-- <a href="merch.html">Merch</a>
