--- a/apply.html
+++ b/apply.html
@@ -13,8 +13,13 @@
     <div class="topnav">
         <a href="index.html">Home</a>
         <a href="Roster.html">Roster</a>
-        <a href="apply.html">Apply Now</a>
+        <a class="active" href="apply.html">Apply Now</a>
         <a href="merch.html">Merch</a>
-        <a class="active" href="Contact.html">Contact us</a>
+        <a href="Contact.html">Contact us</a>
     </div>
 </head>
+<body>
+    <div align="center">
+        <iframe src="https://docs.google.com/forms/d/e/1FAIpQLSehatM18CKFtLWPN4N43OURMw5_ztWWBSM3jjBXUYIFeQEH5Q/viewform?embedded=true" width="700" height="520" frameborder="0" marginheight="0" marginwidth="0">Loading…</iframe>
+    </div>
+</body>
