--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
     <div class="topnav">
         <a class="active" href="index.html">Home</a>
         <a href="Roster.html">Roster</a>
+        <a href="apply.html">Apply Now</a>
         
         <!-- Disabled -->
         <!-- <a href="merch.html">Merch</a>
