Fixed Disabled pages on Apply.html
- Disabled Merch and Contact pages

--- a/apply.html
+++ b/apply.html
@@ -14,8 +14,10 @@
         <a href="index.html">Home</a>
         <a href="Roster.html">Roster</a>
         <a class="active" href="apply.html">Apply Now</a>
-        <a href="merch.html">Merch</a>
+        <!-- Disabled -->
+        <!-- <a href="merch.html">Merch</a>
         <a href="Contact.html">Contact us</a>
+        -->
     </div>
 </head>
 <body>
