Fixed page title
- Changed page title from "Contact Us" to "Apply Now!"

--- a/apply.html
+++ b/apply.html
@@ -3,7 +3,7 @@
 <!-- Configuration for Webpage -->
 <head>
     <!-- Displayed on Tab-->
-    <title>Contact Us</title>
+    <title>Apply Now!</title>
 
     <!-- Link to CSS -->
     <link rel="stylesheet" href="CSS/index.css">
