--- a/Roster.html
+++ b/Roster.html
@@ -24,18 +24,22 @@
 <body>
     <div align="center">
         <h1>Our Team</h1>
+        <h2>Management</h2>
     </div>
-    <div align="center" class="collaboration">
+    <div align="center">
         <img src="Images/storm.png" alt="StormStarbrickYT" height="300">
         <h2>StormStarbrickYT</h2>
         <p>Owner and Developer</p>
         <p> <a href="https://twitter.com/STORMSTARBRICK" target="_blank"><button class="button">Contact</button></a></p>
     </div>
-    <div align="center" class="collaboration">
+    <div align="center">
         <img src="Images/Canna.jpg" alt="The Canna Fairy" height="300">
         <h2>The Canna Fairy</h2>
         <p>Owner</p>
         <p> <a href="https://twitter.com/thecannafairy" target="_blank"><button class="button">Contact</button></a></p>
+    </div>
+    <div align="center">
+        <h2>Discord Staff</h2>
     </div>
     <div align="center" class="collaboration">
         <img src="Images/Nick (Programmer).png" alt="GreenNickYT" height="300">
