--- a/Roster.html
+++ b/Roster.html
@@ -26,13 +26,13 @@
         <h1>Our Team</h1>
         <h2>Management</h2>
     </div>
-    <div align="center">
+    <div align="center" class="collaboration">
         <img src="Images/storm.png" alt="StormStarbrickYT" height="300">
         <h2>StormStarbrickYT</h2>
         <p>Owner and Developer</p>
         <p> <a href="https://twitter.com/STORMSTARBRICK" target="_blank"><button class="button">Contact</button></a></p>
     </div>
-    <div align="center">
+    <div align="center" class="collaboration">
         <img src="Images/Canna.jpg" alt="The Canna Fairy" height="300">
         <h2>The Canna Fairy</h2>
         <p>Owner</p>
