--- a/Roster.html
+++ b/Roster.html
@@ -27,7 +27,7 @@
         <h2>Management</h2>
     </div>
     <div align="center" class="collaboration" size="300%">
-        <img src="Images/storm.png" alt="StormStarbrickYT" height="300">
+        <img src="Images/sadboistorm.png" alt="StormStarbrickYT" height="300">
         <h2>StormStarbrickYT</h2>
         <p>Owner and Developer</p>
         <p> <a href="https://twitter.com/STORMSTARBRICK" target="_blank"><button class="button">Contact</button></a></p>
