added font changes
- Uploaded font files for OCR A Extended across the site
- Updated index.html to reflect changes

--- a/index.html
+++ b/index.html
@@ -7,7 +7,8 @@
 
     <!-- Link to CSS -->
     <link rel="stylesheet" href="CSS/index.css">
-
+    <link rel="stylesheet" href="CSS/fonts/stylesheet.css" >
+    
     <!-- Navbar -->
     <link rel="stylesheet" type="text/css" href="CSS/navbar.css">
     <div class="topnav">
